# universalchardet

./: CMakeLists.txt  universalchardetConfig.cmake.in
src/base/: CMakeLists.txt  Makefile  main.cpp.test  nscore.h  prmem.h
vc11/: universalchardet.sln  universalchardet.vcxproj  universalchardet.vcxproj.filters
